<resources>
    <string name="app_name">ShiXiPai</string>

    <!-- 登陆 -->
    <string name="network_not_connected">Network is not connected</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="login_username_hint">TWT Username/Email</string>
    <string name="login_password_hint">Password</string>
    <string name="login_btn_text">Login</string>
    <string name="login_error_empty">Can Not Be Empty</string>
    <string name="login_signin">Sign In</string>

    <!-- 侧滑菜单 -->
    <string name="drawer_item_setting">设置</string>
    <string name="drawer_item_share">分享APP</string>
    <string name="drawer_item_feedback">意见反馈</string>

    <!--主活动底部-->
    <string name="main_tag_home">首页</string>
    <string name="main_tag_job">职位</string>
    <string name="main_tag_resume">简历</string>

    <!--HomeFragment-->
    <string name="home_classify">职位分类</string>
    <string name="home_interview">笔试面试</string>
    <string name="home_skill">实习攻略</string>
    <string name="home_recommend">实习推荐</string>

    <!--职位列表item-->
    <string name="item_job_list_place">地点</string>
    <string name="item_job_list_position">职位</string>
    <string name="item_job_list_company">单位</string>
    <string name="item_job_list_money">薪资</string>
    <string name="item_job_list_uncommit">投递简历</string>
    <string name="item_job_list_commited">已投递</string>

    <!--加载信息 -->
    <string name="no_more_information">没有更多消息</string>

    <!--面试题目分类-->
    <string name="interview_title1">互联网</string>
    <string name="interview_title2">金融/法律</string>
    <string name="interview_title3">建设工程</string>
    <string name="interview_title4">销售/推广</string>
    <string name="interview_title5">人力资源/产品</string>
    <string name="interview_title6">汽车/制造</string>
    <string name="interview_title7">文化/传媒</string>
    <string name="interview_title8">教育/医疗</string>
    <string name="interview_title9">文案/管理</string>

    <!--搜索职位地点-->
    <string name="job_place1">北京</string>
    <string name="job_place2">上海</string>
    <string name="job_place3">广州</string>
    <string name="job_place4">深圳</string>
    <string name="job_place5">天津</string>
    <string name="job_place6">重庆</string>
    <string name="job_place7">武汉</string>
    <string name="job_place8">长沙</string>
    <string name="job_place9">杭州</string>
    <string name="job_place10">南京</string>
    <string name="job_place11">沈阳</string>
    <string name="job_place12">哈尔滨</string>
    <string name="job_place13">济南</string>
    <string name="job_place14">成都</string>

    <!-- Photo select dialog strings -->
    <string name="title_dialog_photo_select">选择图片</string>
    <string name="dialog_take_photo">拍照</string>
    <string name="dialog_local_photo">相册</string>

    <!-- Update dialog strings -->
    <string name="update_message">发现新版本</string>
    <string name="update">立即更新</string>
    <string name="update_later">稍后</string>
    <string name="no_new_version">当前已是最新版本</string>
</resources>
