<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="vertical"
    android:background="@color/white"
    tools:context="com.shixipai.ui.home.HomeFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="120dp">

            <LinearLayout
                android:id="@+id/layout_home_classify"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <ImageButton
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:scaleType="centerInside"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="30dp"
                    android:background="@mipmap/ic_classify" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/home_classify"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="10dp"
                    android:textSize="15sp" />
            </LinearLayout>

            <View
                android:layout_width="0.5dp"
                android:layout_height="match_parent"
                android:background="@color/color_divider_white"/>

            <LinearLayout
                android:id="@+id/layout_home_skill"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <ImageButton
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:scaleType="fitXY"
                    android:layout_marginTop="30dp"
                    android:background="@mipmap/ic_skill"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/home_skill"
                    android:textSize="15sp"
                    android:layout_marginTop="10dp"/>
            </LinearLayout>

            <View
                android:layout_width="0.5dp"
                android:layout_height="match_parent"
                android:background="@color/color_divider_white"/>

            <LinearLayout
                android:id="@+id/layout_home_interview"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <ImageButton
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:scaleType="fitXY"
                    android:layout_marginTop="30dp"
                    android:background="@mipmap/ic_interview" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/home_interview"
                    android:textSize="15sp"
                    android:layout_marginTop="10dp"/>
            </LinearLayout>
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:orientation="vertical"
            android:background="@color/color_divider_white">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/home_recommend"
                android:layout_centerInParent="true"
                android:textSize="20sp"
                android:textStyle="bold"/>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <android.support.v7.widget.RecyclerView
                android:id="@+id/home_recycler_view"
                android:scrollbars="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:choiceMode="singleChoice"
                android:divider="@null" />

        </RelativeLayout>

    </LinearLayout>

</ScrollView>

