<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cardview_job_list_item"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="4dp"
    android:layout_marginRight="4dp"
    app:cardUseCompatPadding="true"
    app:cardElevation="1dp">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:id="@+id/job_classify_list_item_layout">

        <RelativeLayout
            android:id="@+id/l1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp">

            <ImageView
                android:id="@+id/_place"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginLeft="5dp"
                android:src="@mipmap/icon_job_place"/>

            <TextView
                android:id="@+id/tv_job_item_place"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:textSize="18sp"
                android:layout_toRightOf="@+id/_place" />

            <TextView
                android:id="@+id/tv_job_item_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="10sp"
                android:layout_alignParentRight="true"
                android:layout_marginRight="15dp"/>

        </RelativeLayout>

        <LinearLayout
            android:id="@+id/l2"
            android:layout_below="@+id/l1"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:layout_marginLeft="25dp"
                android:layout_gravity="center_vertical"
                android:text="@string/item_job_list_position"/>

            <TextView
                android:id="@+id/tv_job_item_postion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="20dp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/l3"
            android:layout_below="@+id/l2"
            android:layout_marginTop="6dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:layout_marginLeft="25dp"
                android:layout_gravity="center_vertical"
                android:text="@string/item_job_list_company"/>

            <TextView
                android:id="@+id/tv_job_item_company"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="20dp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/l4"
            android:layout_below="@+id/l3"
            android:layout_marginTop="6dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:layout_marginLeft="25dp"
                android:layout_gravity="center_vertical"
                android:text="@string/item_job_list_money"/>

            <TextView
                android:id="@+id/tv_job_item_money"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="20dp" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:layout_below="@+id/l4"/>

        <Button
            android:id="@+id/bt_job_item_commit"
            android:layout_width="120dp"
            android:layout_height="35dp"
            android:layout_below="@+id/l3"
            android:layout_alignParentRight="true"
            android:layout_marginRight="10dp"
            android:background="@drawable/item_job_list_btn"
            android:textColor="#FFF"
            android:text="@string/item_job_list_uncommit"/>

    </RelativeLayout>


</android.support.v7.widget.CardView>