<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:scrollbars="vertical"
    tools:context="com.shixipai.ui.home.HomeFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical">

        <include
            android:id="@+id/toolbar_interview_classify"
            layout="@layout/app_toolbar" />

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:layout_marginTop="10dp"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="10dp"
            app:cardElevation="3dp"
            app:cardUseCompatPadding="true">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@mipmap/ic_interview_group1">

                <ImageView
                    android:id="@+id/pic_interview1"
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="70dp"
                    android:src="@mipmap/ic_interview_pic1" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="50dp"
                    android:layout_toRightOf="@+id/pic_interview1"
                    android:text="@string/interview_title1"
                    android:textColor="@color/white"
                    android:textSize="25sp" />
            </RelativeLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="10dp"
            app:cardElevation="3dp"
            app:cardUseCompatPadding="true">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@mipmap/ic_interview_group2">

                <ImageView
                    android:id="@+id/pic_interview2"
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="70dp"
                    android:src="@mipmap/ic_interview_pic2" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="50dp"
                    android:layout_toRightOf="@+id/pic_interview2"
                    android:text="@string/interview_title2"
                    android:textColor="@color/white"
                    android:textSize="25sp" />
            </RelativeLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="10dp"
            app:cardElevation="3dp"
            app:cardUseCompatPadding="true">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@mipmap/ic_interview_group3">

                <ImageView
                    android:id="@+id/pic_interview3"
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="70dp"
                    android:src="@mipmap/ic_interview_pic3" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="50dp"
                    android:layout_toRightOf="@+id/pic_interview3"
                    android:text="@string/interview_title3"
                    android:textColor="@color/white"
                    android:textSize="25sp" />
            </RelativeLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="10dp"
            app:cardElevation="3dp"
            app:cardUseCompatPadding="true">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@mipmap/ic_interview_group4">

                <ImageView
                    android:id="@+id/pic_interview4"
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="70dp"
                    android:src="@mipmap/ic_interview_pic4" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="50dp"
                    android:layout_toRightOf="@+id/pic_interview4"
                    android:text="@string/interview_title4"
                    android:textColor="@color/white"
                    android:textSize="25sp" />
            </RelativeLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="10dp"
            app:cardElevation="3dp"
            app:cardUseCompatPadding="true">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@mipmap/ic_interview_group5">

                <ImageView
                    android:id="@+id/pic_interview5"
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="70dp"
                    android:src="@mipmap/ic_interview_pic5" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="50dp"
                    android:layout_toRightOf="@+id/pic_interview5"
                    android:text="@string/interview_title5"
                    android:textColor="@color/white"
                    android:textSize="25sp" />
            </RelativeLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="10dp"
            app:cardElevation="3dp"
            app:cardUseCompatPadding="true">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@mipmap/ic_interview_group6">

                <ImageView
                    android:id="@+id/pic_interview6"
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="70dp"
                    android:src="@mipmap/ic_interview_pic6" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="50dp"
                    android:layout_toRightOf="@+id/pic_interview6"
                    android:text="@string/interview_title6"
                    android:textColor="@color/white"
                    android:textSize="25sp" />
            </RelativeLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="10dp"
            app:cardElevation="3dp"
            app:cardUseCompatPadding="true">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@mipmap/ic_interview_group7">

                <ImageView
                    android:id="@+id/pic_interview7"
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="70dp"
                    android:src="@mipmap/ic_interview_pic7" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="50dp"
                    android:layout_toRightOf="@+id/pic_interview7"
                    android:text="@string/interview_title7"
                    android:textColor="@color/white"
                    android:textSize="25sp" />
            </RelativeLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="10dp"
            app:cardElevation="3dp"
            app:cardUseCompatPadding="true">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@mipmap/ic_interview_group8">

                <ImageView
                    android:id="@+id/pic_interview8"
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="70dp"
                    android:src="@mipmap/ic_interview_pic8" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="50dp"
                    android:layout_toRightOf="@+id/pic_interview8"
                    android:text="@string/interview_title8"
                    android:textColor="@color/white"
                    android:textSize="25sp" />
            </RelativeLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="10dp"
            app:cardElevation="3dp"
            app:cardUseCompatPadding="true">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@mipmap/ic_interview_group9">

                <ImageView
                    android:id="@+id/pic_interview9"
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="70dp"
                    android:src="@mipmap/ic_interview_pic9" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="50dp"
                    android:layout_toRightOf="@+id/pic_interview9"
                    android:text="@string/interview_title9"
                    android:textColor="@color/white"
                    android:textSize="25sp" />
            </RelativeLayout>

        </android.support.v7.widget.CardView>

    </LinearLayout>

</ScrollView>